Delete button id

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
           <button
             class="button card__like-button"
             type="button"
-            id="like-button-01"
           >
             <span class="button__text">Like</span>
           </button>
@@ -141,7 +140,6 @@
           <button
             class="button card__like-button card__like-button"
             type="button"
-            id="like-button-01"
           >
             <span class="button__text">Like</span>
           </button>
@@ -262,7 +260,6 @@
           <button
             class="button card__like-button"
             type="button"
-            id="like-button-01"
           >
             <span class="button__text">Like</span>
           </button>
@@ -327,7 +324,6 @@
           <button
             class="button card__like-button"
             type="button"
-            id="like-button-01"
           >
             <span class="button__text">Like</span>
           </button>
@@ -389,7 +385,6 @@
           <button
             class="button card__like-button"
             type="button"
-            id="like-button-01"
           >
             <span class="button__text">Like</span>
           </button>
@@ -453,7 +448,6 @@
           <button
             class="button card__like-button"
             type="button"
-            id="like-button-01"
           >
             <span class="button__text">Like</span>
           </button>
@@ -521,7 +515,6 @@
           <button
             class="button card__like-button"
             type="button"
-            id="like-button-01"
           >
             <span class="button__text">Like</span>
           </button>
@@ -1566,7 +1559,7 @@
         </svg>
         <p class="popup__text">Вставьте дискету, чтобы продолжить</p>
         <form class="popup__controller" method="dialog">
-          <button class="button popup__close-button">
+          <button class="button popup__close-button" type="submit">
             <span class="button__text">ОК</span>
           </button>
         </form>
