--- a/index.html
+++ b/index.html
@@ -1559,7 +1559,7 @@
         </svg>
         <p class="popup__text">Вставьте дискету, чтобы продолжить</p>
         <form class="popup__controller" method="dialog">
-          <button class="button popup__close-button" type="submit">
+          <button class="button popup__close-button" type="button" onclick="document.getElementById('floppy-dialog').close()">
             <span class="button__text">ОК</span>
           </button>
         </form>
