--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
             transform="rotate(-180 28 6.46143)"
           />
         </svg>
-        <span class="button__text">Сохранить на&nbsp;память</span>
+        <span class="button__text_popup">Сохранить на&nbsp;память</span>
       </button>
       <dialog class="popup" id="floppy-dialog">
         <svg
@@ -1560,7 +1560,7 @@
         <p class="popup__text">Вставьте дискету, чтобы продолжить</p>
         <form class="popup__controller">
           <button class="button popup__close-button" type="button" onclick="document.getElementById('floppy-dialog').close()">
-            <span class="button__text">ОК</span>
+            <span class="button__text_popup">ОК</span>
           </button>
         </form>
       </dialog>
