--- a/index.html
+++ b/index.html
@@ -1558,11 +1558,11 @@
           />
         </svg>
         <p class="popup__text">Вставьте дискету, чтобы продолжить</p>
-        <form class="popup__controller">
+        <div class="popup__controller">
           <button class="button popup__close-button" type="button" onclick="document.getElementById('floppy-dialog').close()">
             <span class="button__text_popup">ОК</span>
           </button>
-        </form>
+        </div>
       </dialog>
     </main>
     <script src="./scripts/like.js"></script>
