--- a/index.html
+++ b/index.html
@@ -1559,7 +1559,7 @@
         </svg>
         <p class="popup__text">Вставьте дискету, чтобы продолжить</p>
         <div class="popup__controller">
-          <button class="button popup__close-button" type="button" onclick="document.getElementById('floppy-dialog').close()">
+          <button class="button popup__close-button" type="button">
             <span class="button__text_popup">ОК</span>
           </button>
         </div>
